# shari-bot

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  config.dev.local.example.yaml  config.dev.yaml  config.prod.yaml  fleet.toml
deployment/: deployment.yaml  persistentvolumeclaim.yaml  secrets.sealed.yaml
pytube/: Cargo.toml
pytube/src/: main.rs
src/: config.rs  dispatcher.rs  grammers_boilerplate.rs  init_tracing.rs  main.rs  whatever.rs
src/bot/: commands.rs  lang.rs  markdown.rs  mod.rs  upload.rs  whitelist.rs
src/downloader/: mod.rs  tiktok.rs  youtube.rs
src/remuxer/: mod.rs
