[package]
name = "shari-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grammers-client = { git = "https://github.com/Lonami/grammers.git", rev = "ff7432ebcd2ce5a38a63803880837de52c7bf363", features = ["markdown"] }
grammers-session = { git = "https://github.com/Lonami/grammers.git", rev = "ff7432ebcd2ce5a38a63803880837de52c7bf363" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers.git", rev = "ff7432ebcd2ce5a38a63803880837de52c7bf363" }

reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls-webpki-roots", "stream", "cookies"] }
url = "2.2.2"

rusty_ytdl = { version = "0.7.3", default-features = false }

async-trait = "0.1.56"
futures = "0.3.21"
bytes = "1.1.0"
tokio = { version = "1.37.0", features = ["sync", "rt", "macros", "fs", "io-util", "signal"] }
tokio-util = { version = "0.7.11", features = ["compat", "io-util", "codec"] }
tokio-stream = "0.1.15"
async-stream = "0.3.5"
pin-project-lite = "0.2.14"

regex = "1.10.4"
once_cell = "1.19.0"

serde = "1.0.202"
config = "0.14.0"
hex-serde = "0.1.0"
serde_json = "1.0"

# these crates are used by the remuxer
# however, we do not actually use the remuxer: it's not possible to know the size of the resulting file before it's fully downloaded & remuxed and telegram requires to specify the file size upfront
# soo, it's a dead code for now
# ffmpeg-next = "6.0.0"

# unix-named-pipe = "0.2.0"
# tempdir = "0.3.7"
# async-process = "1.4.0"
# which = "5.0.0"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "fmt"] }
snafu = { version = "0.8.2", features = ["futures"] }
opentelemetry = "0.22.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
opentelemetry-otlp = "0.15.0"
tracing-opentelemetry = "0.23.0"

indoc = "2.0.4"
displaydoc = "0.2.4"

[profile.ship]
inherits = "release"
debug = 0
lto = 'thin'
