[package]
name = "pytube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustpython = { git = "https://github.com/RustPython/RustPython", rev = "174c0267276f3ba617cebc7cba3c79a607474615" }
rustpython-vm = { git = "https://github.com/RustPython/RustPython", rev = "174c0267276f3ba617cebc7cba3c79a607474615" }
rustpython-stdlib = { git = "https://github.com/RustPython/RustPython", rev = "174c0267276f3ba617cebc7cba3c79a607474615", features = ["ssl-vendor"] }

anyhow = "1.0.58"